--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-    <div id="app">
-      <canvas id="webglCanvas"></canvas>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Luxottica</title>
+</head>
+
+<body>
+  <div id="app">
+    <canvas id="webglCanvas"></canvas>
+    <div class="colors-container">
+      <button class="color-btn" data-color="#022539" style="background: #022539;"></button>
+      <button class="color-btn" data-color="#fcf1ef" style="background: #fcf1ef;"></button>
+      <button class="color-btn" data-color="#fb991a" style="background: #fb991a;"></button>
+      <button class="color-btn" data-color="#1b7691" style="background: #1b7691;"></button>
     </div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <button class="cat">
+      Provali ora
+    </button>
+  </div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
