Update animations and scene

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="app">
     <canvas id="webglCanvas"></canvas>
     <div class="colors-container">
+      <button class="color-btn" data-color="#000000" style="background: #000000;"></button>
       <button class="color-btn" data-color="#022539" style="background: #022539;"></button>
       <button class="color-btn" data-color="#fcf1ef" style="background: #fcf1ef;"></button>
       <button class="color-btn" data-color="#fb991a" style="background: #fb991a;"></button>
