Add shadow and navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   <div id="app">
     <canvas id="webglCanvas"></canvas>
+    <nav>
+      <img src="/imgs/luxottica-white.png" alt="">
+    </nav>
     <div class="colors-container">
       <button class="color-btn" data-color="#000000" style="background: #000000;"></button>
       <button class="color-btn" data-color="#022539" style="background: #022539;"></button>
@@ -17,7 +20,7 @@
       <button class="color-btn" data-color="#fb991a" style="background: #fb991a;"></button>
       <button class="color-btn" data-color="#1b7691" style="background: #1b7691;"></button>
     </div>
-    <button class="cat">
+    <button id="cat">
       Provali ora
     </button>
   </div>
